# s3-ml-uploader

./: .env  Cargo.toml  README.md  create-test-files.sh  file1.txt  file2.txt  file3.txt
src/: main.rs  ml.rs
