[package]
name = "s3-ml-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = "1.9.0"
aws-config = "1.1.0"
tokio = { version = "1", features = ["full"] }
s3 = { package = "rust-s3", version = "0.34.0" }              # Use the correct package name
reqwest = { version = "0.11", features = ["json", "stream"] }
rayon = "1.8"
futures = "0.3"
dotenv = "0.15"
chrono = "0.4"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
